--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-inventory (0.3) bionic; urgency=medium
+
+  * Dummy upgrade
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 02 Oct 2019 08:04:38 +0200
+
 zero-lliurex-inventory (0.2) bionic; urgency=medium
 
   * Fixed control file
