--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-inventory (0.15.2) jammy; urgency=medium
+
+  * Initial release for Jammy
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Mon, 04 Sep 2023 09:52:25 +0200
+
 zero-lliurex-inventory (0.5.2) focal; urgency=medium
 
   * Fixed zero app file
