--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-inventory (0.15.3) jammy; urgency=medium
+
+  * Source renamed to lliurex-inventory.
+
+ -- Luis Garcia Gisbert <luisgg@gmail.com>  Thu, 26 Jun 2025 13:51:22 +0200
+
 zero-lliurex-inventory (0.15.2) jammy; urgency=medium
 
   * Initial release for Jammy
