--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-inventory (0.4.3) bionic; urgency=medium
+
+  * Source renamed to lliurex-inventory.
+
+ -- Marta Sánchez Gázquez <martisa@gmail.com>  Fri, 27 Jun 2025 10:06:28 +0200
+
 zero-lliurex-inventory (0.4.2) bionic-updates; urgency=medium
 
   * Fixed zero app file
